# AppProtectionSDK

./: LICENSE  README.md  settings.gradle.kts  Лицензионное соглашение.md
app/: build.gradle.kts
app/src/androidTest/java/com/example/appprotectionsdk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/appprotectionsdk/: MainActivity.kt  MemoryTestActivity.kt
app/src/main/java/com/example/appprotectionsdk/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/appprotectionsdk/: ExampleUnitTest.kt
docs/: INTEGRATION.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle.kts
sdk/openssl/include/openssl/: sha.h
sdk/src/main/cpp/: CMakeLists.txt  app_protection_jni.cpp  app_protection_jni.h  memory_monitor.cpp  memory_monitor.h  sha256.cpp
sdk/src/main/java/com/appprotection/sdk/: AppProtectionSDK.kt
sdk/src/main/java/com/appprotection/sdk/internal/: DebugDetector.kt  MemoryMonitor.kt  ProtectionStatus.kt  RootDetector.kt  SecurityConfig.kt
